Update documentation with the date of latest changes

--- a/europecv.tex
+++ b/europecv.tex
@@ -48,11 +48,13 @@
 	University of Udine, Italy\\
 	\\
 	Giuseppe Silano\\
-	\href{mailto:giuseppe.silano@fel.cvut.cz}{\texttt{giuseppe.silano@fel.cvut.cz}}\\
+	\href{mailto:giuseppe.silano@rse-web.it}{\texttt{giuseppe.silano@rse-web.it}}\\
+    Ricerca sul Sistema Energetico (RSE) S.p.A., Italy\\ 
+    Department of Generation Technologies and Materials, and\\
     Faculty of Electrical Engineering\\
     Czech Technical University in Prague, Czech Republic\\
 }
-\date{June 17, 2022}
+\date{August 3, 2022}
 
 
 \begin{document}
@@ -926,7 +928,8 @@ Davide Peressoni} for the biber support (2020.10.26 package release). Thanks to 
 Fachada} for his help with the Portuguese translation (2021.02.05 package release). Thanks to
 \textbf{Pancho Horrillo} for his fix ($\#25$, 2021.05.09 package release). Thanks to
 \textbf{Alecu Ștefan-Iulian} for his fix ($\#26$ and $\#27$, 2022.03.13 package release). Thanks to 
-\textbf{Scott Kostyshak} for his fix ($\#29$ and $\#30$, 2022.06.17 package release).
+\textbf{Scott Kostyshak} for his fix ($\#29$ and $\#30$, 2022.06.17 package release). Thanks 
+to \textbf{Michal Vlasak} for his fix ($\#31$, 2022.08.03 package release).
 
 %%% END SECTION ============================================================
 
