--- a/templates/cv_template_academic_en.tex
+++ b/templates/cv_template_academic_en.tex
@@ -124,7 +124,7 @@
 \subpdfbookmark{Editorial Board}{Editorial Board}
 \ecvitem{}{\textbf{Editorial Board}}
 
-\\
+\vspace*{1em}
 
 \subpdfbookmark{Editor of edited books}{Editor of edited books}
 \ecvitem{}{\textbf{Editor of edited books}}
@@ -136,7 +136,7 @@
 \subpdfbookmark{Program committees}{Program committees}
 \ecvitem{}{\textbf{Program committees}}
 
-\\
+\vspace*{1em}
 
 \subpdfbookmark{Associate editor}{Associate editor}
 \ecvitem{}{\textbf{Associate editor}}
@@ -169,7 +169,8 @@
 
 \subpdfbookmark{Refereed conference proceedings}{Refereed conference proceedings}
 \ecvitem{}{\textbf{Refereed conference proceedings}}
-\\
+
+\vspace*{1em}
 
 \ecvitem[10pt]{\vspace{-0.25cm}\ecvdisplayConferencePublications[FirstPubLabel]}{Details related to 
 the conference paper}
