--- a/europecv.tex
+++ b/europecv.tex
@@ -50,11 +50,11 @@
 	Giuseppe Silano\\
 	\href{mailto:giuseppe.silano@rse-web.it}{\texttt{giuseppe.silano@rse-web.it}}\\
     Ricerca sul Sistema Energetico (RSE) S.p.A., Italy\\ 
-    Department of Generation Technologies and Materials, and\\
+    Department of Power Generation Technologies and Materials, and\\
     Faculty of Electrical Engineering\\
     Czech Technical University in Prague, Czech Republic\\
 }
-\date{February 1, 2024}
+\date{May 11, 2025}
 
 
 \begin{document}
@@ -280,7 +280,7 @@ The following options can be used with the \texttt{\textbackslash documentclass}
 \vspace{0.25cm}
 
 \begin{europecv}
-
+	\vspace{0.5em}
 	\section{Personal information}
 	\ecvitem{\ecv{date}\texttt{\{}\textit{date}\texttt{\}}}{Sets CV update date to \emph{date}. To
 	enter the current date use the \texttt{$\setminus$}\texttt{today} command.}
@@ -845,7 +845,6 @@ In such a way, you can refer your publications into the text as reported below a
 
 \subpdfbookmark{Refereed conference proceedings}{Refereed conference proceedings}
 \ecvitem{}{\textbf{Refereed conference proceedings}}
-\\
 
 \ecvitem[10pt]{[C1]\vspace{-0.25cm}\label{FirstPubLabel}}{Details related to the conference paper}
 
@@ -925,16 +924,8 @@ respectively. Thanks to \textbf{JPSPLeite} for improving the Portuguese translat
 \textbf{Marc-Andre Hermanns} for adding the \texttt{nobranding} feature. Thanks to \textbf{Antonios
 Tsolomitis} for his suggestions into the 2020.01.06 package release. Thanks to \textbf{
 Davide Peressoni} for the biber support into the 2020.10.26 package release. Thanks to 
-\textbf{Nuno
-Fachada} for his help with the Portuguese translation into the 2021.02.05 package release. 
-Thanks to
-\textbf{Pancho Horrillo} for his fix $\#25$ into the 2021.05.09 package release. Thanks to
-\textbf{Alecu Ștefan-Iulian} for his fix $\#26$ and $\#27$, into the 2022.03.13 package 
-release. Thanks to 
-\textbf{Scott Kostyshak} for his fix $\#29$ and $\#30$, into the 2022.06.17 package release. 
-Thanks 
-to \textbf{Michal Vlasak} for his fix $\#31$ into the 2022.08.03 package release. Thanks to 
-\textbf{kaneraZh} for his fix $\#36$ into the 2024.02.01 package release.
+\textbf{Nuno Fachada} for his help with the Portuguese translation into the 2021.02.05 package release. Thanks to \textbf{Pancho Horrillo} for his fix $\#25$ into the 2021.05.09 package release. Thanks to \textbf{Alecu Ștefan-Iulian} for his fix $\#26$ and $\#27$, into the 2022.03.13 package 
+release. Thanks to \textbf{Scott Kostyshak} for his fix $\#29$ and $\#30$, into the 2022.06.17 package release. Thanks to \textbf{Michal Vlasak} for his fix $\#31$ into the 2022.08.03 package release. Thanks to \textbf{kaneraZh} for his fix $\#36$ into the 2024.02.01 package release.
 
 %%% END SECTION ============================================================
 
